--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "lint": "eslint ./src",
+    "deploy": "rm -rf dist && yarn build && gh-pages -d dist"
   },
   "devDependencies": {
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "gh-pages": "^2.0.1",
     "parcel-bundler": "1.11.0",
+    "prettier": "^1.16.4",
     "sass": "^1.17.2"
-  },
-  "dependencies": {
-    "normalize.css": "^8.0.1"
   }
 }
