--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel serve src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --no-source-maps",
     "lint": "eslint ./src",
-    "deploy": "rm -rf dist && yarn build && gh-pages -d dist"
+    "deploy": "rm -rf ./dist && yarn build && gh-pages -d dist"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
