--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "author": "rostog <rostogiorgi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel serve website/index.html",
-    "build:website": "parcel build website/index.html --no-source-maps", 
-    "build": "yarn build:resume && yarn build:website",
-    "lint:resume": "eslint ./resume",
+    "start": "yarn wmr dev --public website",
+    "build:website": "yarn wmr build --public website",
+    "build:css": "yarn sass --no-source-map ./website/sass/main.scss ./website/main.css",
     "lint:website": "eslint ./website",
+    "build": "yarn build:css && yarn build:resume && yarn build:website",
+    "lint:resume": "eslint ./resume",
     "start:resume": "nodemon --exec babel-node ./resume/index",
     "build:resume": "babel-node ./resume/index",
     "lint": "yarn lint:website && yarn lint:resume",
@@ -38,10 +39,9 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "gh-pages": "^2.0.1",
     "nodemon": "^1.18.10",
-    "parcel-bundler": "1.11.0",
     "prettier": "^1.16.4",
-    "sass": "^1.17.2"
+    "sass": "1.17.2",
+    "wmr": "1.3.2"
   }
 }
