--- a/package.json
+++ b/package.json
@@ -6,41 +6,41 @@
   "author": "rostog <rostogiorgi@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "yarn wmr dev --public website",
+    "dev": "yarn wmr dev --public website",
     "build:website": "yarn wmr build --public website",
     "build:css": "yarn sass --no-source-map ./website/sass/main.scss ./website/main.css",
     "lint:website": "eslint ./website",
     "build": "yarn build:css && yarn build:resume && yarn build:website",
     "lint:resume": "eslint ./resume",
-    "start:resume": "nodemon --exec babel-node ./resume/index",
+    "dev:resume": "nodemon --exec babel-node ./resume/index",
     "build:resume": "babel-node ./resume/index",
     "lint": "yarn lint:website && yarn lint:resume",
     "deploy": "rm -rf ./dist && yarn build && gh-pages -d dist -b master"
   },
   "dependencies": {
-    "@babel/runtime": "^7.3.4",
-    "@react-pdf/renderer": "^1.4.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "@babel/runtime": "7.3.4",
+    "@react-pdf/renderer": "1.4.0",
+    "prop-types": "15.7.2",
+    "react": "16.8.4",
+    "react-dom": "16.8.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.3",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
-    "nodemon": "^1.18.10",
-    "prettier": "^1.16.4",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.3.3",
+    "@babel/node": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.3",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-react": "7.0.0",
+    "eslint": "5.15.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
+    "nodemon": "2.0.7",
+    "prettier": "1.16.4",
     "sass": "1.17.2",
     "wmr": "1.3.2"
   }
